--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://CristianFuentes123:t2DdoPuAOiJC8Tqa@cluster0.xothqg1.mongodb.net/cafeDB
+USER=CristianFuentes123
+PASS =t2DdoPuAOiJC8Tqa
