--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=8080
 MONGODB_CNN=mongodb+srv://CristianFuentes123:t2DdoPuAOiJC8Tqa@cluster0.xothqg1.mongodb.net/cafeDB
 USER=CristianFuentes123
 PASS =t2DdoPuAOiJC8Tqa
+SECRETORPRIVATEKEY=Est03sMyPub1icky23@
