Fin seccion 11 -version 4.0.0

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_CNN=mongodb+srv://CristianFuentes123:t2DdoPuAOiJC8Tqa@cluster0.xothqg1.m
 USER=CristianFuentes123
 PASS =t2DdoPuAOiJC8Tqa
 SECRETORPRIVATEKEY=Est03sMyPub1icky23@
+
+GOOGLE_CLIENTE_ID=19109712955-klafh2b2qgsa3cgaqlj4rn7q4eg3dgn7.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
